fingers crossed; workflow should work

--- a/.github/workflows/dynamic.yml
+++ b/.github/workflows/dynamic.yml
@@ -39,8 +39,7 @@ jobs:
           BRANCH_NAME="update-snapshot-${{ github.event.inputs.buildVersion }}"
           git checkout -b $BRANCH_NAME
           git push origin $BRANCH_NAME
-        env:
-          TOKEN: ${{ secrets.TOKEN }} 
+        
 
       - name: Create Pull Request
         if: ${{ success() }}
@@ -78,7 +77,7 @@ jobs:
       - name: Automatically merge PR
         uses: pascalgn/automerge-action@v0.14.3
         env:
-          
+          GHUB_TOKEN: ${{ secrets.GHUB_TOKEN }} 
           MERGE_LABELS: "automerge,!work in progress"
           MERGE_METHOD: "squash"
           MERGE_COMMIT_MESSAGE: "auto-merge: (base branch)"
