--- a/.github/workflows/dynamic.yml
+++ b/.github/workflows/dynamic.yml
@@ -23,15 +23,16 @@ jobs:
       - name: Update POM.xml with SNAPSHOT version
         run: |
           sed -i '/<name>swagger-petstore<\/name>/{n;s|<version>.*</version>|<version>${{ github.event.inputs.buildVersion }}</version>|}' pom.xml
-      
-      
-      - name: Build with Maven
-        run: mvn clean install
-
       - name: Commit changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+      
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Commit and push
+        run: |
           git add pom.xml
           git commit -m "Update SNAPSHOT version to ${{ github.event.inputs.buildVersion }}" || echo "No changes to commit"
           git push origin main
